Закончил разметку и стиизацию секций.

--- a/index.html
+++ b/index.html
@@ -71,9 +71,347 @@
         <img class="hero__img" src="./img/hero/1.jpg" alt="фотография авто">
       </div>
     </section>
-    <section class="servises">
+    <section class="services">
       <div class="wrapper">
-        <h2>Раздел про услуги</h2>
+        <h2 class="title title--bb bb">Услуги</h2>
+
+        <ul class="services__list list-reset">
+          <li>
+            <img src="./img/services/1.jpg" alt="Выхлопная система">
+            <h3 class="services__name">Выхлопная система</h3>
+          </li>
+          <li>
+            <img src="./img/services/2.jpg" alt="Двигатель">
+            <h3 class="services__name">Двигатель</h3>
+          </li>
+          <li>
+            <img src="./img/services/3.jpg" alt="Диагностика">
+            <h3 class="services__name">Диагностика</h3>
+          </li>
+          <li>
+            <img src="./img/services/4.jpg" alt="Замена жидкостей">
+            <h3 class="services__name">Замена жидкостей</h3>
+          </li>
+          <li>
+            <img src="./img/services/5.jpg" alt="Кондиционеры и отопление">
+            <h3 class="services__name">Кондиционеры и отопление</h3>
+          </li>
+          <li>
+            <img src="./img/services/6.jpg" alt="Кузовной ремонт">
+            <h3 class="services__name">Кузовной ремонт</h3>
+          </li>
+          <li>
+            <img src="./img/services/7.jpg" alt="Плановое ТО">
+            <h3 class="services__name">Плановое ТО</h3>
+          </li>
+          <li>
+            <img src="./img/services/8.jpg" alt="Подвеска">
+            <h3 class="services__name">Подвеска</h3>
+          </li>
+          <li>
+            <img src="./img/services/9.jpg" alt="Покраска">
+            <h3 class="services__name">Покраска</h3>
+          </li>
+          <li>
+            <img src="./img/services/10.jpg" alt="Полировка">
+            <h3 class="services__name">Полировка</h3>
+          </li>
+          <li>
+            <img src="./img/services/11.jpg" alt="Ремонт автостекол">
+            <h3 class="services__name">Ремонт автостекол</h3>
+          </li>
+          <li>
+            <img src="./img/services/12.jpg" alt="Рулевое управление">
+            <h3 class="services__name">Рулевое управление</h3>
+          </li>
+          <li>
+            <img src="./img/services/13.jpg" alt="Техническое обслуживание">
+            <h3 class="services__name">Техническое обслуживание</h3>
+          </li>
+          <li>
+            <img src="./img/services/14.jpg" alt="Тонировка и автовинил">
+            <h3 class="services__name">Тонировка и автовинил</h3>
+          </li>
+          <li>
+            <img src="./img/services/15.jpg" alt="Тормозная система">
+            <h3 class="services__name">Тормозная система</h3>
+          </li>
+          <li>
+            <img src="./img/services/16.jpg" alt="Трансмиссия">
+            <h3 class="services__name">Трансмиссия</h3>
+          </li>
+          <li>
+            <img src="./img/services/17.jpg" alt="Установка доп. оборудования">
+            <h3 class="services__name">Установка доп. оборудования</h3>
+          </li>
+          <li>
+            <img src="./img/services/18.jpg" alt="Шиномонтаж">
+            <h3 class="services__name">Шиномонтаж</h3>
+          </li>
+          <li>
+            <img src="./img/services/19.jpg" alt="Электрооборудование">
+            <h3 class="services__name">Электрооборудование</h3>
+          </li>
+
+
+        </ul>
+
+      </div>
+    </section>
+    <section class="brands">
+      <div class="wrapper">
+        <h2 class="title title--bb bb">Обслуживаемые марки</h2>
+        <ul class="brands__list list-reset">
+          <li>
+            <a>
+              <img src="./img/brands/1.jpg" alt="">
+              <h3 class="brands__name">Audi</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/2.jpg" alt="">
+              <h3 class="brands__name">Honda</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/3.jpg" alt="">
+              <h3 class="brands__name">MINI</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/4.jpg" alt="">
+              <h3 class="brands__name">Renault</h3>
+            </a>
+          </li>
+
+          <li>
+            <a>
+              <img src="./img/brands/5.jpg" alt="">
+              <h3 class="brands__name">BMW</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/6.jpg" alt="">
+              <h3 class="brands__name">Hyundai</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/7.jpg" alt="">
+              <h3 class="brands__name">Mazda</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/8.jpg" alt="">
+              <h3 class="brands__name">Skoda</h3>
+            </a>
+          </li>
+
+          <li>
+            <a>
+              <img src="./img/brands/9.jpg" alt="">
+              <h3 class="brands__name">Cadillac</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/10.jpg" alt="">
+              <h3 class="brands__name">Infiniti</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/11.jpg" alt="">
+              <h3 class="brands__name">Mercedes-Benz</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/12.jpg" alt="">
+              <h3 class="brands__name">Smart</h3>
+            </a>
+          </li>
+
+          <li>
+            <a>
+              <img src="./img/brands/13.jpg" alt="">
+              <h3 class="brands__name">Chevrolet</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/14.jpg" alt="">
+              <h3 class="brands__name">Jaguar</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/15.jpg" alt="">
+              <h3 class="brands__name">Mitsubishi</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/16.jpg" alt="">
+              <h3 class="brands__name">Subaru</h3>
+            </a>
+          </li>
+
+          <li>
+            <a>
+              <img src="./img/brands/17.jpg" alt="">
+              <h3 class="brands__name">Chrysler</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/18.jpg" alt="">
+              <h3 class="brands__name">Jeep</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/19.jpg" alt="">
+              <h3 class="brands__name">Nissan</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/20.jpg" alt="">
+              <h3 class="brands__name">Suzuki</h3>
+            </a>
+          </li>
+
+          <li>
+            <a>
+              <img src="./img/brands/21.jpg" alt="">
+              <h3 class="brands__name">Citroen</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/22.jpg" alt="">
+              <h3 class="brands__name">Kia</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/23.jpg" alt="">
+              <h3 class="brands__name">Opel</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/24.jpg" alt="">
+              <h3 class="brands__name">Toyota</h3>
+            </a>
+          </li>
+
+          <li>
+            <a>
+              <img src="./img/brands/25.jpg" alt="">
+              <h3 class="brands__name">Dodge</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/26.jpg" alt="">
+              <h3 class="brands__name">Land Rover</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/27.jpg" alt="">
+              <h3 class="brands__name">Peugeot</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/28.jpg" alt="">
+              <h3 class="brands__name">Volkswagen</h3>
+            </a>
+          </li>
+
+          <li>
+            <a>
+              <img src="./img/brands/29.jpg" alt="">
+              <h3 class="brands__name">Fiat</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/30.jpg" alt="">
+              <h3 class="brands__name">Lexus</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/31.jpg" alt="">
+              <h3 class="brands__name">Porsche</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/32.jpg" alt="">
+              <h3 class="brands__name">Volvo</h3>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./img/brands/33.jpg" alt="">
+              <h3 class="brands__name">Ford</h3>
+            </a>
+          </li>
+
+        </ul>
+      </div>
+    </section>
+
+    <section class="contacts">
+      <div class="wrapper">
+        <h2 class="title title--bb bb">Контакты</h2>
+
+        <ul class="flex-list">
+          <li><a class="button" href="tel:+74957724999" class="tel">
+              <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M7.53 16.47c6.118 6.119 11.96 7.412 14.117 7.53 1.378-2.02 1.96-3.686 2.353-5.176-1.49-1.452-3.66-2.932-5.647-3.765L16 17.412c-.804-.216-3.01-1.128-5.647-3.765C7.716 11.01 6.803 8.804 6.588 8l2.353-2.353C8.108 3.66 6.627 1.49 5.176 0 3.686.392 2.02.975 0 2.353c.118 2.157 1.412 8 7.53 14.118Z" />
+              </svg>
+              <span>+7 (495) 772-49-99</span></a></li>
+          <li><a class="button" href="#">
+              <svg width="18" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M18 9.012C18 4.035 13.97 0 9 0S0 4.035 0 9.012c-.002 2.153.317 3.645 1.538 5.602C2.76 16.571 9 24 9 24s6.24-7.429 7.462-9.386c1.222-1.957 1.541-3.449 1.538-5.602ZM9 5.815h-.005c-1.814 0-3.287 1.38-3.29 3.294-.002 1.914 1.467 3.303 3.28 3.303h.03c1.813 0 3.283-1.389 3.28-3.303-.004-1.914-1.476-3.294-3.29-3.294H9Z" />
+              </svg>
+              <span>Как доехать</span></a></li>
+          <li><a class="button button--icon" href="#">
+              <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#a)">
+                  <path
+                    d="M23.073 7.15a11.788 11.788 0 0 0-2.528-3.72A11.851 11.851 0 0 0 16.797.92 11.816 11.816 0 0 0 12.213 0C10.588 0 9.04.328 7.63.92c-1.409.593-2.68 1.45-3.748 2.51a11.721 11.721 0 0 0-2.528 3.72 11.564 11.564 0 0 0-.824 6.102 11.674 11.674 0 0 0 1.512 4.364l-.505 1.493-.507 1.492-.505 1.494-.507 1.493a.295.295 0 0 0-.01.17.286.286 0 0 0 .081.15c.016.015.032.027.05.039a.243.243 0 0 0 .054.029.42.42 0 0 0 .12.024l.024-.001.024-.003.024-.004.024-.007 1.556-.494 1.556-.495 1.557-.495 1.556-.494a11.86 11.86 0 0 0 5.58 1.39 11.793 11.793 0 0 0 8.332-3.43 11.75 11.75 0 0 0 2.528-3.719c.596-1.399.927-2.936.927-4.55 0-1.611-.33-3.149-.927-4.549Zm-4.724 7.662a4.041 4.041 0 0 1-.213.941 1.667 1.667 0 0 1-.379.576c-.17.179-.377.339-.592.476a3.94 3.94 0 0 1-.648.334 2.028 2.028 0 0 1-.544.146l-.021.002-.021.002-.023.003-.023.001-.104.011-.114.01a3.11 3.11 0 0 1-.126.006c-.042.001-.088.003-.136.003h-.001a3.7 3.7 0 0 1-.416-.024 5.329 5.329 0 0 1-.596-.1 9.345 9.345 0 0 1-.828-.228c-.321-.103-.69-.235-1.112-.404a8.25 8.25 0 0 1-1.31-.674c-.433-.272-.86-.59-1.273-.95a12.72 12.72 0 0 1-1.202-1.198 14.84 14.84 0 0 1-1.103-1.422c-.007-.008-.012-.018-.017-.023l-.014-.021-.01-.016a7.225 7.225 0 0 1-.75-1.228 5.264 5.264 0 0 1-.332-.882 3.727 3.727 0 0 1-.138-.976c0-.37.045-.701.117-.993.072-.292.175-.544.29-.759.115-.216.243-.392.37-.53.125-.139.25-.243.353-.308.099-.063.228-.116.371-.163.141-.045.296-.084.443-.115.146-.03.286-.054.4-.07a2.796 2.796 0 0 1 .314-.031l.032-.001h.03c.086 0 .166.013.242.038a.713.713 0 0 1 .21.123c.064.055.124.123.18.205.056.083.106.183.153.295l.161.388.282.679.274.657c.078.183.131.31.142.33.012.025.032.062.05.11a.839.839 0 0 1 .054.399.822.822 0 0 1-.08.26l-.011.018-.01.02-.009.02-.01.019c-.019.039-.036.076-.055.11a1.267 1.267 0 0 1-.061.11 1.561 1.561 0 0 1-.072.112c-.028.037-.059.079-.095.12l-.035.04a1.119 1.119 0 0 0-.072.085c-.01.014-.024.028-.036.043l-.074.09-.076.089-.075.084-.073.076-.028.028-.032.036a.29.29 0 0 0-.028.032.077.077 0 0 0-.014.025v.004l.003.013a.069.069 0 0 0 .01.022c.003.009.009.02.015.03.05.084.175.267.364.511.191.244.446.544.754.861.308.316.669.648 1.069.952.4.304.841.579 1.31.783l.089.037c.037.016.081.032.12.05.04.016.078.029.106.041l.052.019c.006 0 .011-.003.016-.006.006-.002.011-.008.019-.013l.019-.017.016-.019.18-.208c.076-.087.164-.19.25-.296.088-.104.176-.212.252-.31.076-.097.142-.185.186-.249a.913.913 0 0 1 .265-.261.612.612 0 0 1 .325-.09.723.723 0 0 1 .21.03c.033.008.066.019.1.028.032.01.065.023.096.032.078.028.246.103.454.2a109.612 109.612 0 0 1 1.347.647c.176.085.295.142.305.148.058.028.111.054.163.081.05.027.097.052.14.081a.593.593 0 0 1 .21.208.66.66 0 0 1 .077.267c.014.113.014.245.002.388Z" />
+                </g>
+                <defs>
+                  <clipPath id="a" class="custom">
+                    <path d="M0 0h24v24H0z" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </a></li>
+          <li><a class="button button--icon" href="#">
+              <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_5_562)">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24.161 12c0 6.628-5.372 12-12 12s-12-5.372-12-12 5.372-12 12-12 12 5.372 12 12ZM13.237 8.567l-8.082 3.329c-1.422.555-.588 1.076-.588 1.076s1.213.417 2.253.728c1.041.313 1.596-.033 1.596-.033l4.89-3.296c1.733-1.18 1.318-.21.9.208-.9.901-2.39 2.324-3.64 3.468-.554.485-.278.902-.034 1.11.706.597 2.366 1.681 3.122 2.175.21.138.35.23.38.252.174.14 1.146.764 1.735.625.59-.138.659-.936.659-.936l.867-5.445c.071-.473.143-.936.21-1.372.194-1.26.353-2.291.379-2.652.105-1.18-1.144-.695-1.144-.695s-2.705 1.111-3.503 1.458Z" />
+                </g>
+              </svg>
+            </a></li>
+        </ul>
+        <p class="contacts__text">Адрес: Москва, Строительный проезд д.1 (в яндекс навигаторе набирать oppozitemax)</p>
       </div>
     </section>
   </main>
