--- a/index.html
+++ b/index.html
@@ -412,6 +412,9 @@
             </a></li>
         </ul>
         <p class="contacts__text">Адрес: Москва, Строительный проезд д.1 (в яндекс навигаторе набирать oppozitemax)</p>
+        <div class="contacts__map">
+          <div id="map" class="map"></div>
+        </div>
       </div>
     </section>
   </main>
@@ -420,6 +423,9 @@
       <p class="footer__text">© OPPOZITE MAX 2022. Все права защищены.</p>
     </div>
   </footer>
+
+  <script src="api-maps.yandex.ru/2.1.79/?lang=ru_RU&apikey=7a49471f-d85f-4e70-9dd3-a7a498699c63&amp;"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
