--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@
     </div>
   </footer>
 
-  <script src="api-maps.yandex.ru/2.1.79/?lang=ru_RU&apikey=7a49471f-d85f-4e70-9dd3-a7a498699c63&amp;"></script>
-  <script src="/js/main.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=7a49471f-d85f-4e70-9dd3-a7a498699c63&amp;lang=ru_RU"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
