--- a/index.html
+++ b/index.html
@@ -424,7 +424,9 @@
     </div>
   </footer>
 
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=7a49471f-d85f-4e70-9dd3-a7a498699c63&amp;lang=ru_RU"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=7a49471f-d85f-4e70-9dd3-a7a498699c63&lang=ru_RU"
+    type="text/javascript">
+    </script>
   <script src="js/main.js"></script>
 </body>
 
