--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="header__bottom">
         <ul class="flex-list">
-          <li><a class="button" href="tel:+74957724999" class="tel">
+          <li class="flex-list__big"><a class="button" href="tel:+74957724999" class="tel">
               <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M7.53 16.47c6.118 6.119 11.96 7.412 14.117 7.53 1.378-2.02 1.96-3.686 2.353-5.176-1.49-1.452-3.66-2.932-5.647-3.765L16 17.412c-.804-.216-3.01-1.128-5.647-3.765C7.716 11.01 6.803 8.804 6.588 8l2.353-2.353C8.108 3.66 6.627 1.49 5.176 0 3.686.392 2.02.975 0 2.353c.118 2.157 1.412 8 7.53 14.118Z" />
@@ -377,7 +377,7 @@
         <h2 class="title title--bb bb">Контакты</h2>
 
         <ul class="flex-list">
-          <li><a class="button" href="tel:+74957724999" class="tel">
+          <li class="flex-list__big"><a class="button" href="tel:+74957724999" class="tel">
               <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M7.53 16.47c6.118 6.119 11.96 7.412 14.117 7.53 1.378-2.02 1.96-3.686 2.353-5.176-1.49-1.452-3.66-2.932-5.647-3.765L16 17.412c-.804-.216-3.01-1.128-5.647-3.765C7.716 11.01 6.803 8.804 6.588 8l2.353-2.353C8.108 3.66 6.627 1.49 5.176 0 3.686.392 2.02.975 0 2.353c.118 2.157 1.412 8 7.53 14.118Z" />
