--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <title>Технический центр Oppozite Max</title>
   <meta name="description" content="Технический центр Oppozite Max">
 
-  <link rel="stylesheet" href="css/main.min.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="./fav/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./fav/favicon-16x16.png">
+  <link rel="manifest" href="./fav/site.webmanifest">
+  <link rel="mask-icon" href="./fav/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#113974">
+  <meta name="theme-color" content="#ffffff">
+
+  <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body class="sticky-footer__grid">
@@ -30,13 +38,13 @@
                   d="M7.53 16.47c6.118 6.119 11.96 7.412 14.117 7.53 1.378-2.02 1.96-3.686 2.353-5.176-1.49-1.452-3.66-2.932-5.647-3.765L16 17.412c-.804-.216-3.01-1.128-5.647-3.765C7.716 11.01 6.803 8.804 6.588 8l2.353-2.353C8.108 3.66 6.627 1.49 5.176 0 3.686.392 2.02.975 0 2.353c.118 2.157 1.412 8 7.53 14.118Z" />
               </svg>
               <span>+7 (495) 772-49-99</span></a></li>
-          <li><a class="button" href="#">
+          <li><a class="button" href="#contacts">
               <svg width="18" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M18 9.012C18 4.035 13.97 0 9 0S0 4.035 0 9.012c-.002 2.153.317 3.645 1.538 5.602C2.76 16.571 9 24 9 24s6.24-7.429 7.462-9.386c1.222-1.957 1.541-3.449 1.538-5.602ZM9 5.815h-.005c-1.814 0-3.287 1.38-3.29 3.294-.002 1.914 1.467 3.303 3.28 3.303h.03c1.813 0 3.283-1.389 3.28-3.303-.004-1.914-1.476-3.294-3.29-3.294H9Z" />
               </svg>
               <span>Как доехать</span></a></li>
-          <li><a class="button button--icon" href="#">
+          <!-- <li><a class="button button--icon" href="#">
               <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#a)">
                   <path
@@ -56,7 +64,7 @@
                     d="M24.161 12c0 6.628-5.372 12-12 12s-12-5.372-12-12 5.372-12 12-12 12 5.372 12 12ZM13.237 8.567l-8.082 3.329c-1.422.555-.588 1.076-.588 1.076s1.213.417 2.253.728c1.041.313 1.596-.033 1.596-.033l4.89-3.296c1.733-1.18 1.318-.21.9.208-.9.901-2.39 2.324-3.64 3.468-.554.485-.278.902-.034 1.11.706.597 2.366 1.681 3.122 2.175.21.138.35.23.38.252.174.14 1.146.764 1.735.625.59-.138.659-.936.659-.936l.867-5.445c.071-.473.143-.936.21-1.372.194-1.26.353-2.291.379-2.652.105-1.18-1.144-.695-1.144-.695s-2.705 1.111-3.503 1.458Z" />
                 </g>
               </svg>
-            </a></li>
+            </a></li> -->
         </ul>
 
       </div>
@@ -375,7 +383,7 @@
       </div>
     </section>
 
-    <section class="contacts">
+    <section class="contacts" id="contacts">
       <div class="wrapper">
         <h2 class="title title--bb bb">Контакты</h2>
 
@@ -386,13 +394,13 @@
                   d="M7.53 16.47c6.118 6.119 11.96 7.412 14.117 7.53 1.378-2.02 1.96-3.686 2.353-5.176-1.49-1.452-3.66-2.932-5.647-3.765L16 17.412c-.804-.216-3.01-1.128-5.647-3.765C7.716 11.01 6.803 8.804 6.588 8l2.353-2.353C8.108 3.66 6.627 1.49 5.176 0 3.686.392 2.02.975 0 2.353c.118 2.157 1.412 8 7.53 14.118Z" />
               </svg>
               <span>+7 (495) 772-49-99</span></a></li>
-          <li><a class="button" href="#">
+          <!-- <li><a class="button" href="#">
               <svg width="18" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M18 9.012C18 4.035 13.97 0 9 0S0 4.035 0 9.012c-.002 2.153.317 3.645 1.538 5.602C2.76 16.571 9 24 9 24s6.24-7.429 7.462-9.386c1.222-1.957 1.541-3.449 1.538-5.602ZM9 5.815h-.005c-1.814 0-3.287 1.38-3.29 3.294-.002 1.914 1.467 3.303 3.28 3.303h.03c1.813 0 3.283-1.389 3.28-3.303-.004-1.914-1.476-3.294-3.29-3.294H9Z" />
               </svg>
-              <span>Как доехать</span></a></li>
-          <li><a class="button button--icon" href="#">
+              <span>Как доехать</span></a></li> -->
+          <!-- <li><a class="button button--icon" href="#">
               <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#a)">
                   <path
@@ -412,7 +420,7 @@
                     d="M24.161 12c0 6.628-5.372 12-12 12s-12-5.372-12-12 5.372-12 12-12 12 5.372 12 12ZM13.237 8.567l-8.082 3.329c-1.422.555-.588 1.076-.588 1.076s1.213.417 2.253.728c1.041.313 1.596-.033 1.596-.033l4.89-3.296c1.733-1.18 1.318-.21.9.208-.9.901-2.39 2.324-3.64 3.468-.554.485-.278.902-.034 1.11.706.597 2.366 1.681 3.122 2.175.21.138.35.23.38.252.174.14 1.146.764 1.735.625.59-.138.659-.936.659-.936l.867-5.445c.071-.473.143-.936.21-1.372.194-1.26.353-2.291.379-2.652.105-1.18-1.144-.695-1.144-.695s-2.705 1.111-3.503 1.458Z" />
                 </g>
               </svg>
-            </a></li>
+            </a></li> -->
         </ul>
         <p class="contacts__text">Адрес: Москва, Строительный проезд д.1 (в яндекс навигаторе набирать oppozitemax)</p>
       </div>
@@ -429,10 +437,10 @@
     </div>
   </footer>
 
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=7a49471f-d85f-4e70-9dd3-a7a498699c63&lang=ru_RU"
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=7a49471f-d85f-4e70-9dd3-a7a498699c63&lang=ru_RU"
     type="text/javascript">
-    </script>
-  <script src="js/main.js"></script>
+  </script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
